--- a/index.html
+++ b/index.html
@@ -123,14 +123,11 @@
                     <span class="font-16px">Em todo o Brasil</span>
                     <h2 class="font-48px">A Saque Digital não para de crescer</h2>
                     <div>
-                        
                         <ul>
-                            <h2 class="font-18px">Centro-Oeste</h2>
                             <li class="font-15px">Mato Grosso do Sul</li>
                             <li class="font-15px">Mato Grosso</li>
                             <li class="font-15px">Goiás</li>
                             <li class="font-15px">Distrito Federal</li>
-                            <h2 class="font-18px">Norte</h2>
                             <li class="font-15px">Rondônia</li>
                             <li class="font-15px">Acre</li>
                             <li class="font-15px">Amazonas</li>
@@ -138,9 +135,6 @@
                             <li class="font-15px">Pará</li>
                             <li class="font-15px">Amapá</li>
                             <li class="font-15px">Tocantins</li>
-                        </ul>
-                        <ul>
-                            <h2 class="font-18px">Nordeste</h2>
                             <li class="font-15px">Maranhão</li>
                             <li class="font-15px">Piauí</li>
                             <li class="font-15px">Ceará</li>
@@ -150,13 +144,9 @@
                             <li class="font-15px">Alagoas</li>
                             <li class="font-15px">Sergipe</li>
                             <li class="font-15px">Bahia</li>
-                        </ul>
-                        <ul>
-                            <h2 class="font-18px">Sul</h2>
                             <li class="font-15px">Santa Catarina</li>
                             <li class="font-15px">Paraná</li>
                             <li class="font-15px">Rio Grande do Sul</li>
-                            <h2 class="font-18px">Sudeste</h2>
                             <li class="font-15px">São Paulo</li>
                             <li class="font-15px">Rio de Janeiro</li>
                             <li class="font-15px">Minas Gerais</li>
@@ -164,6 +154,7 @@
                         </ul>
                     </div>
                 </div>
+                <img src="./img/BrasilNovoSaque.png" alt="brazil map">
             </div>
         </section>
         <section class="contact">
